test/runnable/imports/link12146a.d
struct Bar
{
    bool opCmp(ubyte val) { return false; }
}
