test/fail_compilation/extra-files/imp17489.d
struct Path {
    immutable() m_nodes;
}

struct DirectoryChange {
    ubyte bla;
    Path path;
}
